--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
     "@react-navigation/stack": "^6.3.20",
     "@shopify/restyle": "^2.4.2",
     "@tanstack/react-query": "^5.12.2",
+    "@types/react": "~18.0.27",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "typescript": "^4.9.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.8",
     "prettier": "^3.1.0",
     "typescript": "^5.1.3"
   },
